feature - arraylist sort: ArrayList sort examples. Refactor for replacing System.out.println by Logger.